new drafts of code, writeup

--- a/InfoTheoryPredictionMarketsCode.ipynb
+++ b/InfoTheoryPredictionMarketsCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "import statsmodels\n",
+    "import pymc3 as pm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,35 +52,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "marketTicker = 'FED-23DEC-T3.00'\n",
-    "historyResponse = kalshi_api.get_market_history(marketTicker)\n",
-    "order_times = np.array([order.ts for order in historyResponse.history])\n",
-    "order_times = order_times - min(order_times)\n",
-    "waiting_times = np.diff(order_times)"
+    "kalshi_api.get_markets(limit=1000).markets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_volume = 10\n",
+    "max_volume = 50\n",
+    "\n",
+    "markets = [m for m in kalshi_api.get_markets(limit=1000).markets \n",
+    "    if (m.volume > min_volume and m.volume < max_volume)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markets[1].ticker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "market_hisotry = kalshi_api.get_market_history(markets[1].ticker)\n",
+    "order_times = np.array([order.ts for order in market_hisotry.history])\n",
+    "order_times = order_times - min(order_times)\n",
+    "waiting_times = np.diff(order_times)\n",
+    "waiting_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# MLE fit for exponential distribution\n",
-    "expo_lambda_MLE = 1/np.mean(waiting_times)"
+    "expon_lambda_MLE = 1/np.mean(waiting_times)\n",
+    "expon_lambda_MLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# likelihood of data under exponential fit\n",
-    "exponential_likelihood = np.prod(stats.expon.pdf(waiting_times, expo_lambda_MLE))"
+    "expon_loglik = np.sum(np.log(stats.expon.pdf(waiting_times, expon_lambda_MLE)))\n",
+    "expon_loglik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MLE for double-gamma does not exist, so we estimate paramaters with Bayesian methods\n",
+    "with pm.Model() as model:\n",
+    "    # priors via method of moments\n",
+    "    lambda_rate = pm.Gamma('lambda', alpha=np.mean(waiting_times)**2 / np.var(waiting_times)\n",
+    "                           , beta=np.mean(waiting_times) / np.var(waiting_times))\n",
+    "    observation = pm.Exponential('obs', lam=lambda_rate, observed=waiting_times)\n",
+    "    trace = pm.sample(1000)"
    ]
   },
   {
@@ -86,6 +138,16 @@
    "outputs": [],
    "source": [
     "# likelihood ratio test compared to null dist., double-gamma (avoids overdispersion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# are agents lambdas close together, or far apart?\n",
+    "# difficult question since orderer IDs are not accessible"
    ]
   }
  ],
